--- a/GradleCI/.jfrog-pipelines/values.yml
+++ b/GradleCI/.jfrog-pipelines/values.yml
@@ -1,6 +1,6 @@
 ## This string will prefix the resources and pipeline, allowing you to add
 ## the pipeline source multiple times with unique names.
-namePrefix: sample
+namePrefix: gradle_sample
  
 ## The name of your Artifactory integration
 artIntegration: myArtifactory
@@ -17,7 +17,7 @@ artIntegration: myArtifactory
  
 ##### Repository Details
 repo:
-  path: org/repo
+  path: RjSH1/newTemplates
   gitIntegration: myGithub
   branchPattern: "^main$"
  
