--- a/MavenCI/.jfrog-pipelines/values.yml
+++ b/MavenCI/.jfrog-pipelines/values.yml
@@ -1,7 +1,7 @@
 ## This string will prefix the resources and pipeline.
 ## It will allow you to add a pipeline source from this
 ## template multiple times with unique names.
-namePrefix: sample
+namePrefix: maven_sample
  
 ## The name of your Artifactory integration
 artIntegration: myArtifactory
